# shard

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  S^7  fails-base.txt  gate_sweep.sh  run_corpus.sh
docs/: BOUNDARIES.md  BUILD.md  CANON.md  CERT.md  FLOATS.md  IMP.md  ISA.md  LANGUAGE.md  LAYOUT.md  LOWERING.md  M3-V1-VS-V2.md  MEMORY.md  OVERVIEW.md  PIO.md  REFINEMENT.md  REVISIT.md  RISCV.md  SEARCH.md  TCB.md  TOTALITY.md  X86.md
docs/archive/: DESIGN-REVIEW-2026-07-18.md  TRANSFER.md
examples/: add_nat_zero.sexp  add_nat_zero.shard  add_nat_zero_new.shard  add_src.shard  add_x86_out.shard  addw_src.shard  addw_x86_out.shard  admit_demo.shard  adq13_probe.auto.shard  adq13_probe.shard  arglen_src.shard  arglen_x86_out.shard  auto_demo.auto.shard  auto_demo.shard  auto_missing_rejects.shard  axiom_kind_rejects.shard  axiom_untagged_rejects.shard  beqloop_probe.shard  bin_entry_rejects.shard  binelf_probe.sh  binelf_probe.shard  bitfrag_probe.shard  bits_demo.shard  build_products.shard  bytes_basics.shard  bytes_bridge.shard  bytes_facts.shard  bytescp_probe.shard  bytesrep_probe.shard  bytesum_src.shard  bytesum_x86_out.shard  byteswr_probe.shard  callcomp_probe.shard  callloop_probe.shard  canon_pin.shard  canon_rejects.shard  cert_rows.shard  cert_rows_rejects.shard  chain_sugar.shard  chain_sugar_rejects.shard  (+308 more)
examples/add/: add_src.shard  add_x86_out.shard
examples/addw/: addw_src.shard  addw_x86_out.shard
examples/calc/: calc.sexp  calc.shard  calc_app.sexp  calc_app.shard  calc_app_spec.sexp  calc_app_spec.shard  calc_app_trace.shard  calc_app_world.shard  calc_equiv.sexp  calc_equiv.shard  calc_ndigit.sexp  calc_ndigit.shard  calc_proof.sexp  calc_proof.shard  calc_reconcile_tests.sexp  calc_reconcile_tests.shard  calc_show.sexp  calc_show.shard  calc_show_run.sexp  calc_show_run.shard  calc_spec.sexp  calc_spec.shard  calc_spec_tests.sexp  calc_spec_tests.shard
examples/cli/: cat.sexp  cat.shard  eval_app.sexp  eval_app.shard
examples/io/: calc_repl.shard  cat_lazy.shard  cat_loop.shard  echo_world.shard  eval_app.shard  filecat.shard
examples/ledger_dep/: ledger_dep.shard  mod.req.shard
examples/modules_demo/: README.md  consumer.shard
examples/req_dir_demo/: consumer.shard
examples/req_gate_rejects/: helper.shard  mod.req.shard
examples/sha256sum/: sha256sum_elf.shard  sha256sum_src.shard  sha256sum_x86_out.shard
examples/snake_game/: README.md  snake.sexp  snake.shard  snake_app.sexp  snake_app.shard  snake_game.req.shard  snake_view.sexp  snake_view.shard
examples/snake_game_2/: arena.shard  game.shard  mod.req.shard  render.shard  snake_io.req.shard  snake_io.shard
examples/snake_game_3/: game.shard  snake.shard
kernel/: admit.shard  arith.shard  canon.shard  check.sexp  check.shard  checker.auto.shard  checker.shard  desugar.shard  driver.auto.shard  driver.shard  dsl_print.shard  eqdec.sexp  eqdec.shard  eval.shard  evm.shard  expr_size.shard  facts.shard  farkas.sexp  farkas.shard  kernel.shard  lia.shard  loader.shard  module.sexp  module.shard  ord.shard  proof.sexp  proof.shard  proof_reader.shard  proof_size.shard  reader.auto.shard  reader.shard  reduce.auto.shard  reduce.sexp  reduce.shard  stdlib.shard  term.sexp  term.shard  trace.auto.shard  trace.shard  types.shard  (+2 more)
meta/antiunify/: antiunify.shard  mod.req.shard  typed.shard
meta/census/: census.shard  mod.req.shard
rust_bootstrap/: Cargo.toml
shard-viewer/: Cargo.toml  README.md
shard-viewer/src/: flow.rs  layout.rs  lib.rs  model.rs  proof.rs  scope.rs  sexpr.rs  view.rs
shard-viewer/src/view/: board.rs  flow.rs  highlight.rs  inspector.rs  map.rs  methods.rs  mod.rs  shared.rs  systems.rs
shard-viewer/src/view/map/: cards.rs  commit.rs  deck.rs  els.rs  mod.rs
src/: ast.rs  eval.rs  lib.rs  load.rs  nval.rs  prim.rs
std/: arith.sexp  arith.shard  axiom_scope_rejects.shard  div.sexp  div.shard  list.sexp  list.shard  map.sexp  map.shard  mem.sexp  mem.shard  nat.sexp  nat.shard  order.sexp  order.shard
tools/: reader.sexp  reader.shard  reader_corpus.txt
(+550 files in other folders)
