[package]
name = "shard-viewer"
version = "0.1.0"
edition = "2024"
description = "A graphical navigator for shard source — draws methods and systems as flow charts"
license = "MIT OR Apache-2.0"
publish = false
default-run = "shard-viewer"

# Independent of the shard rust_bootstrap: this tool does its own shard
# parsing (a lightweight structural s-expr reader, NOT the kernel elaborator)
# so it never burdens the bootstrap checker.

[lib]
name = "shard_viewer"
path = "src/lib.rs"

# Fast-iterating text dump of the extracted graph — no GUI deps, so the
# parser can be exercised against the whole corpus without compiling damascene.
[[bin]]
name = "shard-graph"
path = "src/bin/graph.rs"

# The graphical navigator (damascene + native window host).
[[bin]]
name = "shard-viewer"
path = "src/bin/viewer.rs"

# Headless SVG + lint render of one file's graph — the build-time review loop.
[[bin]]
name = "shard-render"
path = "src/bin/render.rs"

[dependencies]
# Path deps on the local damascene checkout: we use the native pan/zoom
# `viewport()` widget, which isn't in the published 0.4.3 yet. Switch back to
# crates.io versions once a release ships it.
damascene-core = { path = "../../../damascene/damascene.main/crates/damascene-core" }
damascene-winit-wgpu = { path = "../../../damascene/damascene.main/crates/damascene-winit-wgpu" }
