[package]
name = "shard-viewer"
version = "0.1.0"
edition = "2024"
description = "A graphical navigator for shard source — draws methods and systems as flow charts"
license = "MIT OR Apache-2.0"
publish = false
default-run = "shard-viewer"

# Independent of the shard rust_bootstrap: this tool does its own shard
# parsing (a lightweight structural s-expr reader, NOT the kernel elaborator)
# so it never burdens the bootstrap checker.

[lib]
name = "shard_viewer"
path = "src/lib.rs"

# Fast-iterating text dump of the extracted graph — no GUI deps, so the
# parser can be exercised against the whole corpus without compiling damascene.
[[bin]]
name = "shard-graph"
path = "src/bin/graph.rs"

# The graphical navigator (damascene + native window host).
[[bin]]
name = "shard-viewer"
path = "src/bin/viewer.rs"

# Headless SVG + lint render of one file's graph — the build-time review loop.
[[bin]]
name = "shard-render"
path = "src/bin/render.rs"

[dependencies]
# Path deps on the local damascene checkout: it carries fixes the viewer needs
# that aren't in a crates.io release yet — wheel-zoom yielding to block_pointer
# overlays (#111, so the source lightbox scrolls) and viewport() laying Hug
# content at full intrinsic (#112, so tall flow diagrams aren't clamped). Switch
# back to crates.io versions once a release ships both.
damascene-core = { path = "../../../damascene/damascene.main/crates/damascene-core" }
damascene-winit-wgpu = { path = "../../../damascene/damascene.main/crates/damascene-winit-wgpu" }
